--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/sbsoftware/node-capped-array/issues"
   },
-  "homepage": "https://github.com/sbsoftware/node-capped-array"
+  "homepage": "https://github.com/sbsoftware/node-capped-array",
+  "devDependencies": {
+    "should": "~2.1.0",
+    "mocha": "~1.14.0"
+  }
 }
